--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -226,13 +226,10 @@
         margin-right: 10px;
       }
     }
-
-
   }
 
 
-  .inside
-  {
+  .inside {
     #results-container {
       margin-left: 0;
       border-left: 0;
@@ -265,15 +262,6 @@
 
       .button-print-container {
         display: none;
-      }
-
-      .button-share-email,
-      .button-map-zoom {
-        border-left: 1px dotted $greyscale_light;
-      }
-
-      .button-top {
-        border-right: 1px dotted $greyscale_light;
       }
 
       .pagination {
